aws-study-11-network-ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS-Study Template

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true # 名前解決用としてtrue設定
      Tags:
        - Key: Name
          Value: aws-study-vpc

  # Subnet（2つともパブリックIPを自動付与可能にする）
  SubnetAZ1a: 
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.1.0/24
      VpcId: !Ref MyVPC
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: aws-study-subnet1a

  SubnetAZ1c:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.2.0/24
      VpcId: !Ref MyVPC
      AvailabilityZone: ap-northeast-1c
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: aws-study-subnet1c


  # InternetGateway
  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: aws-study-igw


  # VPCGatewayAttachment
  MyVPCGatewayAttachment: 
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway


  # RouteTable
  MyRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: aws-study-route


  # インターネット向け通信（0.0.0.0/0）をInternet Gateway経由で許可するルート定義。
  MyRouteInternet:
    Type: AWS::EC2::Route
    DependsOn: MyVPCGatewayAttachment 
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0 
      GatewayId: !Ref MyInternetGateway   


  # 各サブネットとルートテーブルを関連付け（パブリックサブネット化）
  MyRouteLocal: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRouteTable
      SubnetId: !Ref SubnetAZ1a

  # ALBやRDSを配置するSubnetAZ1cもインターネットアクセスできるように関連付け
  MyRouteLocal2: 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRouteTable
      SubnetId: !Ref SubnetAZ1c


  MySecurityGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS Study EC2
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: aws-study-securityGroup-ec2
  

  MyInstance:
  # EC2（Amazon Linux 2023, t2.micro）
    Type: AWS::EC2::Instance
    Properties:
  # Amazon Linux 2023の最新AMIをSSMパラメータストアから取得
      ImageId: !Sub "resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64"
      InstanceType: t2.micro
      SubnetId: !Ref SubnetAZ1a
      DisableApiTermination: false
      InstanceInitiatedShutdownBehavior: stop
      SecurityGroupIds:
        - !Ref MySecurityGroupEC2
      KeyName: aws-dev-20250514
      Monitoring: false
      Tags:
        - Key: Name
          Value: aws-study-ec2
